링크 헤더 이미지 설정

--- a/blog/cloud/_posts/2024-03-30-AWS-IAM.md
+++ b/blog/cloud/_posts/2024-03-30-AWS-IAM.md
@@ -5,6 +5,8 @@ author: "minseo"
 categories: [blog, cloud]
 tags: [AWS, ACC]
 comments: true
+img:
+  path: ../../../static/img/240330/AWS-logo.png
 ---
 ## AWS IAM
 
