--- a/blog/cloud/_posts/2024-03-30-AWS-IAM.md
+++ b/blog/cloud/_posts/2024-03-30-AWS-IAM.md
@@ -5,6 +5,12 @@ author: "minseo"
 categories: [blog, cloud]
 tags: [AWS, ACC]
 comments: true
+img:
+  path: /assets/img/sidebar-bg.png
+  srcset:
+    1920w: /assets/img/sidebar-bg.png
+    960w:  /assets/img/sidebar-bg.png
+    480w:  /assets/img/sidebar-bg.png
 ---
 ## AWS IAM
 
