--- a/blog/cloud/_posts/2024-03-30-AWS-IAM.md
+++ b/blog/cloud/_posts/2024-03-30-AWS-IAM.md
@@ -1,16 +1,14 @@
 ---
 layout: post
 title:  "AWS IAM"
+description: >
+  AWS IAM에 대해 알아보자!
 author: "minseo"
 categories: [blog, cloud]
 tags: [AWS, ACC]
 comments: true
 img:
-  path: /assets/img/sidebar-bg.png
-  srcset:
-    1920w: /assets/img/sidebar-bg.png
-    960w:  /assets/img/sidebar-bg.png
-    480w:  /assets/img/sidebar-bg.png
+  path: /static/img/240330/AWS-logo.png
 ---
 ## AWS IAM
 
