좀 돼주세요

--- a/blog/cloud/_posts/2024-03-30-AWS-IAM.md
+++ b/blog/cloud/_posts/2024-03-30-AWS-IAM.md
@@ -8,7 +8,11 @@ categories: [blog, cloud]
 tags: [AWS, ACC]
 comments: true
 img:
-  path: /static/img/240330/AWS-logo.png
+  path: /assets/img/image.png
+  srcset:
+    1920w: /assets/img/image@0,5x.jpg
+    960w:  /assets/img/image@0,25x.jpg
+    480w:  /assets/img/image@0,125x.jpg
 ---
 ## AWS IAM
 
