--- a/blog/cloud/_posts/2024-03-30-AWS-IAM.md
+++ b/blog/cloud/_posts/2024-03-30-AWS-IAM.md
@@ -7,12 +7,8 @@ author: "minseo"
 categories: [blog, cloud]
 tags: [AWS, ACC]
 comments: true
-# image:
-#   path: /assets/img/image.png
-#   srcset:
-#     1920w: /assets/img/image@0,5x.jpg
-#     960w:  /assets/img/image@0,25x.jpg
-#     480w:  /assets/img/image@0,125x.jpg
+image:
+  path: /static/img/240330/AWS-logo.png
 ---
 ## AWS IAM
 
