Settings for Link image

--- a/blog/cloud/_posts/2024-03-30-AWS-IAM.md
+++ b/blog/cloud/_posts/2024-03-30-AWS-IAM.md
@@ -7,8 +7,7 @@ author: "minseo"
 categories: [blog, cloud]
 tags: [AWS, ACC]
 comments: true
-image:
-  path: /static/img/240330/AWS-logo.png
+hide_description: true
 ---
 ## AWS IAM
 
