Modify post style: 20240330 AWS IAM

--- a/blog/cloud/_posts/2024-03-30-AWS-IAM.md
+++ b/blog/cloud/_posts/2024-03-30-AWS-IAM.md
@@ -1,15 +1,12 @@
 ---
 layout: post
 title:  "AWS IAM"
-description: >
-  AWS IAM에 대해 알아보자!
 author: "minseo"
 categories: [blog, cloud]
 tags: [AWS, ACC]
 comments: true
-hide_description: true
 ---
-## AWS IAM
+# [AWS] IAM
 
 <br><br>
 <center><img src="../../../static/img/240330/AWS-logo.png" width="40%"></center>
