--- a/blog/CSE/_posts/2024-03-04-OSI-7-Layer.md
+++ b/blog/CSE/_posts/2024-03-04-OSI-7-Layer.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title:  "OSI 7 Layer"
+title:  "[Network] OSI 7 Layer"
 author: "minseo"
-categories: [blog, network]
-tags: ["CSE"]
+categories: [blog, CSE]
+tags: ["network"]
 comments: true
 ---
-# OSI 7 Layer
+# [Network] OSI 7 Layer
 
 ## 개요
 네트워크 통신이 일어나는 과정을 7단계로 나타낸 것이다.   
