Fix 'url not found' error due to directory structure

--- a/blog/CSE/_posts/2024-03-04-OSI-7-Layer.md
+++ b/blog/CSE/_posts/2024-03-04-OSI-7-Layer.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "[Network] OSI 7 Layer"
 author: "minseo"
-categories: [blog, CSE]
+categories: [blog, cse]
 tags: ["network"]
 comments: true
 ---
