Rename 'CSE' category

--- a/blog/cs/_posts/2024-03-04-OSI-7-Layer.md
+++ b/blog/cs/_posts/2024-03-04-OSI-7-Layer.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "[Network] OSI 7 Layer"
 author: "minseo"
-categories: [blog, cse]
+categories: [blog, cs]
 tags: ["network"]
 comments: true
 ---
