--- a/blog/cs/_posts/2024-03-04-OSI-7-Layer.md
+++ b/blog/cs/_posts/2024-03-04-OSI-7-Layer.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title:  "[Network] OSI 7 Layer"
+title:  "[NW] OSI 7 Layer"
 author: "minseo"
 categories: [blog, cs]
 tags: ["network"]
 comments: true
 ---
-# [Network] OSI 7 Layer
+# [NW] OSI 7 Layer
 
 ## 개요
 네트워크 통신이 일어나는 과정을 7단계로 나타낸 것이다.   
