Revise tag name

--- a/blog/cs/_posts/2024-03-04-OSI-7-Layer.md
+++ b/blog/cs/_posts/2024-03-04-OSI-7-Layer.md
@@ -3,10 +3,10 @@ layout: post
 title:  "[NW] OSI 7 Layer"
 author: "minseo"
 categories: [blog, cs]
-tags: ["network"]
+tags: ["Network"]
 comments: true
 ---
-# [NW] OSI 7 Layer
+# [Network] OSI 7 Layer
 
 ## 개요
 네트워크 통신이 일어나는 과정을 7단계로 나타낸 것이다.   
