Modify post style: 20240428 컨테이너 기술과 Docker

--- a/blog/cloud/_posts/2024-04-03-컨테이너-기술에-대한-이해.md
+++ b/blog/cloud/_posts/2024-04-03-컨테이너-기술에-대한-이해.md
@@ -45,8 +45,8 @@ EC2로 했던 작업이 무엇인지 이해하지 못한 채 무작정 새로운
 ## 클라우드 (Cloud) vs 온프레미스 (On-Premise)
 
   우리가 서비스를 개발할 때를 떠올려보자.  
-  열심히 작성한 코드와 파일들만 덩그러니 ~ 있다고해서 뭐 특별한 일이 일어나지는 않는다.
-  애플리케이션의 구축과 실행을 위해서는 서버, 데이터베이스, 네트워크, 운영체제 등 갖춰진 환경이 필요히다!
+  열심히 작성한 코드와 파일들만 덩그러니 ~ 있다고해서 뭐 특별한 일이 일어나지는 않는다.  
+  애플리케이션의 구축과 실행을 위해서는 서버, 데이터베이스, 네트워크, 운영체제 등 갖춰진 환경이 필요히다!  
   이러한 애플리케이션을 위한 인프라를 구축하는 방식에는 크게 두 가지가 있다.
 
 ### 클라우드
@@ -64,11 +64,12 @@ EC2로 했던 작업이 무엇인지 이해하지 못한 채 무작정 새로운
   온프레미스는 사용자가 직접 서버 컴퓨터, 데이터 센터, 네트워크 연결을 손수 만들고 관리하는 것
   - 클라우드 서비스 이전에는 기업이 자체적으로 온프레미스 환경을 구축하여 사용했다.  
   지금도 기업이나 개인이 필요에 따라 온프레미스 환경을 사용하기도 하지만 클라우드 서비스를 많이 활용하는 편
-  - 사용해야 할 컴퓨팅 자원이 무엇인지, 요구되는 자원의 특성이 무엇인지, 예산이 얼마인지 등 상황에 따라 적절한 방법을 선택할 수 있다.
+  - 사용해야 할 컴퓨팅 자원이 무엇인지, 요구되는 자원의 특성이 무엇인지, 예산이 얼마인지 등  
+    상황에 따라 적절한 방법을 선택할 수 있다.
 
 ## 가상 머신 (VM) vs 컨테이너 기술 (Container)
 
-서론에서 언급했듯 기존의 컴퓨터 사용 방식은 리소스를 낭비한다는 문제가 있었다.
+서론에서 언급했듯 기존의 컴퓨터 사용 방식은 리소스를 낭비한다는 문제가 있었다.  
 물리적인 서버를 보다 효율적으로 사용하기 위해 **가상화 기술**이 등장하였다.  
 두 가상화 기술을 간단히 비교해보자.
 <br><br>
@@ -125,7 +126,9 @@ EC2로 했던 작업이 무엇인지 이해하지 못한 채 무작정 새로운
 도커는 컨테이너를 위한 **운영 체제**이다.  
 가상 머신은 서버 하드웨어를 가상화하고 공유하여 사용하는 기술이다. 반면 컨테이너는 서버 운영 체제를 가상화한다. 그러므로 운영 체제의 자원을 컨테이너들이 공유하는 것으로 이해할 수 있을 것이다. 위 그림과 같이, 각각의 컨테이너는 각각의 게스트 OS를 사용하지 않고 **하나의 호스트 OS**(정확히는 리눅스 커널)를 공유하여 사용한다. 
 
-이러한 컨테이너 기술은 앞서 말했듯 LXC(리눅스 컨테이너)를 기반으로 한다. 리눅스는 **`namespace`**와 **`cgroup`**이라는 기능을 제공하는데, 바로 이 기능이 컨테이너가 환경을 분리하고 그에 따라 자원을 관리할 수 있도록 만들어 준다.
+이러한 컨테이너 기술은 앞서 말했듯 LXC(리눅스 컨테이너)를 기반으로 한다.  
+리눅스는 **`namespace`**와 **`cgroup`**이라는 기능을 제공하는데,  
+바로 이 기능이 컨테이너가 환경을 분리하고 그에 따라 자원을 관리할 수 있도록 만들어 준다.
 
 ### Namespaces
 - **Limits what you can see**
