--- a/blog/cloud/_posts/2024-04-03-컨테이너-기술에-대한-이해.md
+++ b/blog/cloud/_posts/2024-04-03-컨테이너-기술에-대한-이해.md
@@ -78,7 +78,7 @@ EC2로 했던 작업이 무엇인지 이해하지 못한 채 무작정 새로운
 <summary> &nbsp; <b>cf. Below your programs: </b> 어떠한 구조로 프로그램이 실행되는가? </summary>
   <center>
     <img src="../../../static/img/240403/Below program.png" width="90%">
-    <div>애플리케이션, 운영체제(OS), 하드웨어가 낯설다면 🤨 위 그림을 참고하자!</div>
+    <div class="figcaption">애플리케이션, 운영체제(OS), 하드웨어가 낯설다면 🤨 위 그림을 참고하자!</div>
   </center>
 </details>
 
@@ -178,8 +178,8 @@ cf. 리소스: CPU, 메모리, I/O, 네트워크 대역 등
 
 - 도커 컨테이너를 생성하기 위한 지침이 들어있는 읽기 전용 템플릿이다.
 - 애플리케이션의 종속성과 실행환경을 설명하는 명령어들로 구성된 `Dockerfile`이라는 텍스트 파일에 이미지가 정의된다.
-- 도커 파일의 **각 명령어**는 이미지에 **`레이어`**를 생성한다.
-  이미지를 새롭게 빌드할 때, 레이어에 변경 사항이 없으면 이전 버전의 레이어를 참조하고
+- 도커 파일의 **각 명령어**는 이미지에 **`레이어`**를 생성한다.  
+  이미지를 새롭게 빌드할 때, 레이어에 변경 사항이 없으면 이전 버전의 레이어를 참조하고  
   파일이 추가되거나 수정되면 새로운 레이어를 생성하는 방식이다.
 - 기본적인 레이어는 읽기 전용(Read-Only Layer)으로 생성된다.
 
@@ -215,7 +215,8 @@ cf. 리소스: CPU, 메모리, I/O, 네트워크 대역 등
 - 애플리케이션을 실행할 수 있는 독립된 프로세스로,  
   필요한 모든 실행 파일, 바이너리 코드, 라이브러리 및 구성 파일 등이 들어있다.
 - Docker API 또는 CLI를 사용하여 컨테이너를 생성, 시작, 중지, 이동 또는 삭제할 수 있다.
-- 컨테이너를 생성할 때 기존의 읽기 전용 레이어 위에 새로운 쓰기 가능한 레이어(Read-Write Layer)가 생성된다. 따라서 컨테이너가 실행될 때 발생하는 변경사항은 읽기/쓰기 전용 레이어에 저장하고, 기존의 이미지는 보존된다.
+- 컨테이너를 생성할 때 기존의 읽기 전용 레이어 위에 새로운 쓰기 가능한 레이어(Read-Write Layer)가 생성된다.  
+  따라서 컨테이너가 실행될 때 발생하는 변경사항은 읽기/쓰기 전용 레이어에 저장하고, 기존의 이미지는 보존된다.
 
 <br><center><img src="../../../static/img/240403/docker-process.png" width="80%"></center>
 
