Add permalink to created posts

--- a/blog/cloud/_posts/2024-03-30-AWS-IAM.md
+++ b/blog/cloud/_posts/2024-03-30-AWS-IAM.md
@@ -5,6 +5,7 @@ author: "minseo"
 categories: [blog, cloud]
 tags: [AWS, ACC]
 comments: true
+permalink: '/:categories/:year/:month/:day/:title/'
 ---
 # [AWS] IAM
 
