--- a/blog/cloud/_posts/2024-04-03-컨테이너-기술에-대한-이해.md
+++ b/blog/cloud/_posts/2024-04-03-컨테이너-기술에-대한-이해.md
@@ -5,7 +5,7 @@ author: "minseo"
 categories: [blog, cloud]
 tags: [Docker, ACC]
 comments: true
-hide_description: true
+permalink: '/:categories/:year/:month/:day/:title/'
 ---
 # [Docker] 컨테이너 기술과 Docker
 
