--- a/blog/cs/_posts/2024-03-04-OSI-7-Layer.md
+++ b/blog/cs/_posts/2024-03-04-OSI-7-Layer.md
@@ -5,6 +5,7 @@ author: "minseo"
 categories: [blog, cs]
 tags: ["Network"]
 comments: true
+permalink: '/:categories/:year/:month/:day/:title/'
 ---
 # [Network] OSI 7 Layer
 
