--- a/blog/cloud/_posts/2024-05-15-AWS-EC2.md
+++ b/blog/cloud/_posts/2024-05-15-AWS-EC2.md
@@ -162,6 +162,8 @@ EC2에 비해 편리하게 인스턴스를 생성할 수 있는 **`lightsail`**,
 
 ## Load Balancer
 
+<center><img src="../../../static/img/20240515/load-balancer.png" width="80%"></center><br>
+
 - 클라이언트와 서버 사이에 위치하여, 서버에 가해지는 트래픽을 여러 대의 서버에 균등하게 분배한다.
 - Scalability
     - 트래픽을 분산시켜 성능을 최적화
