Test open graph image

--- a/blog/cloud/_posts/2024-05-15-AWS-EC2.md
+++ b/blog/cloud/_posts/2024-05-15-AWS-EC2.md
@@ -5,6 +5,8 @@ author: "minseo"
 categories: [blog, cloud]
 tags: [AWS, ACC]
 comments: true
+image: "/static/img/240330/AWS-logo.png"
+hide_image: true
 ---
 # [AWS] EC2
 
