Unify cover image

--- a/blog/cloud/_posts/2024-03-30-AWS-IAM.md
+++ b/blog/cloud/_posts/2024-03-30-AWS-IAM.md
@@ -5,7 +5,7 @@ author: "minseo"
 categories: [blog, cloud]
 tags: [AWS, ACC]
 comments: true
-image: "/static/img/240330/AWS-logo.png"
+image: "/assets/img/post-cover.png"
 hide_image: true
 ---
 # [AWS] IAM
