Add image path to AWS posts

--- a/blog/cloud/_posts/2024-05-15-AWS-EC2.md
+++ b/blog/cloud/_posts/2024-05-15-AWS-EC2.md
@@ -5,6 +5,7 @@ author: "minseo"
 categories: [blog, cloud]
 tags: [AWS, ACC]
 comments: true
+image: "/static/img/logo/aws-logo.png"
 hide_image: true
 ---
 # [AWS] EC2
