--- a/blog/cs/_posts/2025-07-01-http-1-2-3.md
+++ b/blog/cs/_posts/2025-07-01-http-1-2-3.md
@@ -8,7 +8,7 @@ comments: true
 image: "/static/img/250610/http-logo.png"
 hide_image: true
 ---
-# HTTP의 과거 현재 미래 (HTTP/1.1, HTTP/2, HTTP/3)
+# HTTP의 과거 현재 미래 (HTTP/1.1, HTTP/2, QUIC)
 
 <center><img src="../../../static/img/250610/http-logo.png" width="100%"></center><br>
 
@@ -18,7 +18,7 @@ hide_image: true
 
 1990년대까지만 해도 인터넷이 이렇게 다양한 용도로 쓰이고, 수많은 사람들이 동시에 사용하는 인프라가 될 거라 예상한 사람은 많지 않았다. HTTP는 본래 단순히 문서를 가져오기 위한 용도로 등장했지만, 점점 복잡해지는 웹 구조와 증가하는 사용자수에 기존 기술은 한계를 드러내기 시작했다. 이에 따라 HTTP는 시대의 요구에 맞게 계속해서 진화하게 되었다.
 
-2021년 기준, 전 세계 웹사이트의 약 45.9%가 HTTP/2를 사용 중이라고 배웠었다. 그러나 2025년 6월 10일 현재는 HTTP/2의 비율이 33%로 감소했고, HTTP/3는 35%, QUIC은 8%로 변화된 양상을 [확인](https://w3techs.com/technologies/overview/site_element)했다. 단 4년 간의 변화만 지켜봐도, 정보 통신 기술이 빠르게 변화하는 세상 속에서 공부하고 있는 게 체감이 된다. <span style="color:#737373; font-size:14px; font-weight:300;"> 가끔 참 신기하다... </span>
+2021년 기준, 전 세계 웹사이트의 약 45.9%가 HTTP/2를 사용 중이라고 배웠었다. 그러나 2025년 6월 기준으로 다시 찾아보니 HTTP/2의 비율이 33%로 감소했고, HTTP/3는 35%, QUIC은 8%로 변화된 양상을 [확인](https://w3techs.com/technologies/overview/site_element)했다. 단 4년 간의 변화만 지켜봐도, 정보 통신 기술이 빠르게 변화하는 세상 속에서 공부하고 있는 게 체감이 된다. <span style="color:#737373; font-size:14px; font-weight:300;"> 가끔 참 신기하다... </span>
 
 이번 글에서는 수업 시간에 배운 내용을 바탕으로, **HTTP/1.1**부터 **HTTP/2, HTTP/3 기반 QUIC**까지의 흐름을 순서대로 정리하며 각 기술이 어떤 문제를 어떻게 해결했는지 복습하려고 한다.
 
